--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del pos</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar lo interesante</p>
+                <p>Este es un parrafo adicional de prueba</p>
             </div>
         </div>
     </body>
