--- a/blogpost.html
+++ b/blogpost.html
@@ -6,12 +6,13 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog
+                Juan David Martínez
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del pos</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar lo interesante</p>
                 <p>Este es un parrafo adicional de prueba</p>
+                <p>Hola Mundo</p>
             </div>
         </div>
     </body>
